--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- I love you, Kathleen!!! <3 -->
+    <title>KatieMae's Recipe Book</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="minimum-scale=1, width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>KatieMae's Recipe Book</title>
+    <link rel="stylesheet" href="%PUBLIC_URL%/site.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
