Started work on recipe creation.

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <!-- I love you, Kathleen!!! <3 -->
     <title>KatieMae's Recipe Book</title>
     <meta name="viewport" content="minimum-scale=1, width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
